--- a/package.json
+++ b/package.json
@@ -2,10 +2,29 @@
   "name": "toolbox",
   "version": "1.0.0",
   "main": "server.js",
-  "repository": "https://github.com/DeniKucevic/toolbox.git",
-  "author": "Brixi <denikucevic@gmail.com>",
+  "scripts": {
+    "start": "nodemon server.js",
+    "dev": "concurrently \"npm run start\" \"cd client && npm start\""
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DeniKucevic/toolbox.git"
+  },
+  "author": "Brixi <denikucevic@gmail.com>, Memi <nemanja.spasojevic.memi@gmail.com",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/DeniKucevic/Auth-backend/issues"
+  },
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^4.4.1",
+    "morgan": "^1.10.0",
+    "pg": "^8.5.1"
+  },
+  "devDependencies": {
+    "concurrently": "^6.0.0",
+    "nodemon": "^2.0.7"
   }
 }
