--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "morgan": "^1.10.0",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "concurrently": "^6.0.0",
